--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+build
+doc.txt
+assets
+firebase.json
+firestore.rules
+firestore.indexes.json
+storage.rules
+.firebaserc
